--- a/style.css
+++ b/style.css
@@ -1,45 +1,37 @@
-@charset "utf-8";
-/* CSS Document */
 body{
-	text-align:center;
+	text-align: center;
 }
-
-header, section, footer, article, aside, nav, hgroup{
-	display:block;
+header,section,footer,aside,nav,article,hgroup{
+	display: block;
 }
-
 #skin{
-	width:700px;
-	margin:20px auto;
-	padding:5px;
-	background:red;
-	border:4px solid black;
-	border-radius:10px;
+	width: 700px;
+	margin: 10px auto;
+	padding: 5px;
+	background: red;
+	border: 4px solid black;
+	border-radius: 10px;
 }
-
-#nav{
-	margin: 5px 0;
+nav{
+	margin: 5px 0px;
 }
-
 #buttons{
-	float:left;
-	width:70px;
-	height:22px;
+	float: left;
+	width: 70px;
+	height: 22px;
 }
-
 #defaultBar{
-	position:relative;
-	float:left;
-	width:600px;
-	height:5px;
-	padding:4px;
-	border:2px solid black;
-	background:#666;
+	position: relative;
+	float: left;
+	width: 600px;
+	height: 16px;
+	padding: 4px;
+	border: 2px solid black;
+	background: yellow;
 }
-
 #progressBar{
-	position:absolute;
-	width:0px;
-	height:5px;
-	background:#C6C;
+	position: absolute;
+	width: 0px;
+	height: 16px;
+	background: blue;
 }
